# teams

./: .gitignore  .gitmessage  0001-Star-2.1.0-start-new-version.patch  Cargo.toml  LICENSE  README.md  deny.toml  log  rank
commiter/: Cargo.toml  README.md
commiter/src/: main.rs
flow/: Cargo.toml
flow/src/: main.rs
logs/: commiter-2.2.2-changes.md  commiter-2.3.0-changes.md  commiter-3.0.0-changes.md  commiter-3.1.0-changes.md  commiter-3.2.0-changes.md  commiter-4.0.0-changes.md  commiter-4.0.1-changes.md  teams-4.0.1-changes.md  teams-4.0.2-changes.md
src/: main.rs
src/todo/: mod.rs
