[package]
name = "teams"
version = "4.0.2"
edition = "2021"
license-file = "LICENSE"
authors = ["Willy Micieli"]
repository = "https://github.com/otechdo/teams"
homepage = "https://github.com/otechdo/teams/wiki"
categories = ["development-tools"]
description = "a free software to ensure better project management for teams"
keywords = ["organization", "management", "monitoring", "communication", "teams"]
readme = "README.md"
