[package]
name = "teams"
version = "4.0.2"
edition = "2021"
license = "MIT"
authors = ["Willy Micieli"]
repository = "https://github.com/otechdo/teams"
homepage = "https://github.com/otechdo/teams/wiki"
categories = ["development-tools"]
description = "a free software to ensure better project management for teams"
keywords = ["organization", "management", "monitoring", "communication", "teams"]
readme = "README.md"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita" }
gtk = { version = "0.9.0", package = "gtk4", features = ["gnome_47"] }
mysql_async = "0.34.1"
