[package]
name = "flow"
version = "3.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Willy Micieli"]
repository = "https://github.com/otechdo/commiter/flow"
categories = ["development-tools"]
description = "A program to manage git flow"
keywords = ["git", "zuu", "commit", "quality", "rust"]
readme = "README.md"
[dependencies]
inquire = "0.7.5"
